# sesh

./: CLA.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  config.toml.example
scripts/: verify_bls_vector.py
src/: backup.rs  cli.rs  clipboard.rs  codec.rs  config.rs  crypto.rs  export.rs  format.rs  keystore.rs  lib.rs  main.rs  protocol.rs  qr.rs  registry.rs  table.rs  terminal.rs  totp.rs  wizard.rs
tests/: cli.rs  domain_tags.rs
